--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("~leaflet/dist/leaflet.css");
 
-body{
+body {
   padding: 1rem;
+}
+
+.leaflet-container {
+  width: 100%;
+  height: 100%;
 }
